# fluree-db

./: .gitmodules  Cargo.toml  WAVE3-HANDOFF-DOSSIER.md  dist-workspace.toml  pr-1453-review.md  pr-1453-summary.md  regression-budget.json
.fluree-memory/: repo.ttl
.github/workflows/: ci.yml
docs/: SUMMARY.md
docs/api/: README.md  bolt.md  endpoints.md
docs/audit/: 2026-07-sparql-testsuite-audit.md
docs/cli/: README.md  cache.md  create.md  load.md  remote.md  server-integration.md  track.md  validate.md
docs/concepts/: datatypes.md  iri-and-context.md  time-travel.md
docs/contributing/: README.md  benches.md  shacl-compliance.md  shacl-implementation.md  sparql-compliance.md
docs/design/: README.md  auth-contract.md  bolt-adapter.md  cross-ledger-model-enforcement.md  ontology-imports.md  remote-mounts.md
docs/getting-started/: quickstart-query.md  rust-api.md
docs/graph-sources/: r2rml.md
docs/guides/: README.md  bolt.md  cookbook-cypher.md  cookbook-search.md  cookbook-shacl.md  sharing-data.md
docs/indexing-and-search/: README.md  fulltext.md  vector-search.md
docs/ledger-config/: override-control.md  setting-groups.md
docs/operations/: configuration.md  query-peers.md
docs/query/: README.md  cypher.md  datalog-rules.md  reasoning.md  sparql.md
docs/reference/: crate-map.md  cypher-support-matrix.md  vocabulary.md
docs/security/: cross-ledger-policy.md  policy-in-transactions.md  policy-model.md  programmatic-policy.md
docs/transactions/: insert.md  update-where-delete-insert.md
fluree-bench-support/src/: budget.rs  tracing.rs
fluree-bench-support/templates/: BENCH_TEMPLATE.rs
fluree-bench-virtual/: .gitignore  Cargo.toml  README.md  budgets.json
fluree-bench-virtual/baselines/expected/: q001.json  q002.json  q003.json  q004.json  q005.json  q006.json  q007.json  q008.json  q009.json  q010.json  q011.json  q012.json  q013.json  q014.json  q015.json  q016.json  q017.json  q018.json  q019.json  q020.json  q021.json  q022.json  q023.json  q024.json  q025.json  q026.json  q027.json  q028.json  q029.json  q030.json  q031.json  q032.json  q033.json  q034.json  q035.json  q036.json  q037.json  q038.json  q039.json  q040.json  (+14 more)
fluree-bench-virtual/baselines/perf/: native-sf01.json  virtual-sf01.json
fluree-bench-virtual/corpus/: manifest.json
fluree-bench-virtual/corpus/queries/: q001_count_class.rq  q001_store_directory.rq  q002_star_projection.rq  q002_store_detail.rq  q003_distinct_regions.rq  q003_fk_join.rq  q004_cities_in_region.rq  q004_filter_order.rq  q005_group_rollup.rq  q005_supplier_scorecard.rq  q006_enterprise_accounts.rq  q007_accounts_by_industry.rq  q008_revenue_by_region.rq  q009_revenue_by_region_having.rq  q010_revenue_by_quarter.rq  q011_orders_in_quarter.rq  q012_top_products_by_units.rq  q013_products_above_avg_units.rq  q014_channel_mix.rq  q015_shipment_sla.rq  q016_orders_optional_shipment.rq  q017_orders_never_shipped.rq  q018_large_payments_by_tender.rq  q019_gl_large_debits.rq  q020_gl_posting_window.rq  q021_gl_account_code_range.rq  q022_current_customers_by_segment.rq  q023_all_customers_by_segment.rq  q024_current_customers_birthyear.rq  q025_category_csat_having.rq  q026_resolution_by_priority.rq  q027_web_events_by_type_device.rq  q028_purchase_events_products.rq  q029_purchase_or_cart_events.rq  q030_web_events_in_month.rq  q031_inventory_below_reorder.rq  q032_onhand_by_store.rq  q033_employee_managers.rq  q034_manager_chain_path.rq  q035_grandmanager_path.rq  (+19 more)
fluree-bench-virtual/src/: baseline.rs  budgets.rs  canon.rs  corpus.rs  dashboard.rs  exec.rs  main.rs  report.rs  schema.rs  spans.rs  targets.rs
fluree-bench-virtual/targets/: enterprise-sf01-mapping.ttl  native-sf01.json  virtual-sf01-stacked.json  virtual-sf01.json  virtual-sf20.json
fluree-db-api/: Cargo.toml
fluree-db-api/benches/: insert_formats.rs  query_hot_property_path.rs  query_hot_whole_graph_agg.rs
fluree-db-api/examples/: bolt_node_emit_probe.rs  cypher_agg_cliff_probe.rs  cypher_phase_profile.rs  cypher_point_floor_profile.rs  cypher_traversal_probe.rs  delete_where_probe.rs  path_expansion_probe.rs
fluree-db-bolt/: Cargo.toml
fluree-db-bolt/src/: chunk.rs  handshake.rs  lib.rs  message.rs  packstream.rs  session.rs  value.rs
fluree-db-cli/: Cargo.toml
fluree-db-consensus/: Cargo.toml
fluree-db-iceberg/: Cargo.toml
fluree-db-ledger/: Cargo.toml
fluree-db-nameservice-sync/: Cargo.toml
fluree-db-nameservice-sync/src/: lib.rs  proxy_nameservice.rs  proxy_storage.rs  vended_s3.rs
fluree-db-query/: Cargo.toml
fluree-db-server/: Cargo.toml
scripts/local/: stack  (+1 more)
testsuite-shacl/: Cargo.toml  Makefile
testsuite-shacl/src/: compare.rs  lib.rs  manifest.rs  runner.rs
testsuite-shacl/tests/: w3c_shacl.rs
testsuite-sparql/: Cargo.toml  Makefile
testsuite-sparql/src/: lib.rs  manifest.rs  query_handler.rs  result_comparison.rs  result_format.rs  sparql_handlers.rs  subprocess.rs  vocab.rs
testsuite-sparql/tests/: w3c_sparql.rs
testsuite-sparql/tests/registers/: mod.rs
(+485 files in other folders)
