[package]
name = "fluree-db-bolt"
description = "Bolt protocol (Neo4j wire protocol) server-side codec and session state machine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
