[package]
name = "testsuite-shacl"
version = "4.1.1"
edition = "2021"
publish = false

[dependencies]
# Fluree crates (for testing)
fluree-db-api = { path = "../fluree-db-api", features = ["native", "shacl"] }
fluree-db-core = { path = "../fluree-db-core" }
fluree-graph-turtle = { path = "../fluree-graph-turtle" }
fluree-graph-ir = { path = "../fluree-graph-ir" }

# Test infrastructure
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.dev]
opt-level = 1
