[package]
name = "testsuite-sparql"
version = "4.1.1"
edition = "2021"
publish = false

# Standalone package: never part of the repo workspace (the root Cargo.toml
# also excludes it by path, but that exclusion doesn't apply when the repo is
# checked out as a nested git worktree — this marker keeps cargo from walking
# up to an enclosing workspace root).
[workspace]

[dependencies]
# Fluree crates (for testing)
fluree-db-api = { path = "../fluree-db-api", features = ["native"] }
fluree-db-sparql = { path = "../fluree-db-sparql" }
fluree-graph-turtle = { path = "../fluree-graph-turtle" }
fluree-graph-ir = { path = "../fluree-graph-ir" }

# Test infrastructure
anyhow = "1"
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bin]]
name = "run-w3c-test"
path = "src/bin/run_w3c_test.rs"
